2007-06-03  Abel Cheung  <abelcheung@gmail.com>

	* hk2tw.pl, tw2hk.pl: Some little word addition.

2007-06-02  Abel Cheung  <abelcheung@gmail.com>

	* hk2tw.pl, tw2hk.pl: Now accepts special file header comment
	which can globally convert certain word. Translator will not
	be prompted anymore for that particular word.

2007-05-23  Abel Cheung  <abelcheung@gmail.com>

	* hk2tw.pl, tw2hk.pl: Yet another set of change from Ambrose Li.

2007-05-23  Abel Cheung  <abelcheung@gmail.com>

	* hk2tw.pl, tw2hk.pl: Accumulated update of conversion table.

2007-04-25  Abel Cheung  <abelcheung@gmail.com>

	* hk2tw.pl, tw2hk.pl: Incorporate changes from Ambrose Li.

2006-09-25  Abel Cheung  <abel@oaka.org>

	* hk2tw.pl, tw2hk.pl: Accumulated update of conversion table.

2006-09-13  Abel Cheung  <abel@oaka.org>

	* hk2tw.pl, tw2hk.pl: Accumulated update of conversion table.

2006-08-29  Abel Cheung  <abel@oaka.org>

	* hk2tw.pl, tw2hk.pl: More conversion list from Wikipedia and
	同文堂 (tongwen.openfoundry.org). 

2006-08-26  Abel Cheung  <abel@oaka.org>

	* hk2tw.pl, tw2hk.pl: Some bug fixes to prevent '$1' appears
	literally in output.

2006-08-25  Abel Cheung  <abel@oaka.org>

	* hk2tw.pl, tw2hk.pl: Remove some word substitution according to
	Walter Cheuk <wwycheuk@gmail.com>.

2006-08-24  Abel Cheung  <abel@oaka.org>

	* hk2tw.pl: New file.
	* tw2hk.pl: Minor update.

2006-08-17  Abel Cheung  <abel@oaka.org>

	* tw2hk.pl:
	- Allows multiple choice
	- Add support for special tag inside comment, so that zh_HK
	  translation inside comment would be used instead of automatically
	  convert from zh_TW one
	- Even more word conversions

2006-08-16  Abel Cheung  <abel@oaka.org>

	* tw2hk.pl: More word conversion list from wikipedia.

2006-08-02  Abel Cheung  <abel@oaka.org>

	* tw2hk.pl: Minor cleanup.

2006-07-30  Abel Cheung  <abel@oaka.org>

	* tw2hk.pl: Do what msgmerge --no-wrap does before conversion.
	Some little amendments of words conversion table as well.
