@@ -394,7 +394,8 @@ sub translate() {
 	do_trans("潮溼", "潮濕");
 	do_trans("自訂(?!閱)", "自選");
 	do_trans("公尺", "米");
-	do_trans("依(?![從然靠])", "根據");		# Ambrose:「依照」不是香港口語，台灣也會用
+	do_trans("依照", "根據");		# Ambrose:「依照」不是香港口語，台灣也會用
+	do_trans("依(?![從然靠])", "根據");
 	do_trans("[暱昵]稱", "網名");			# 這兒反而是口語化顯得生動活潑
 
 	# online ???
