@@ -1,3 +1,7 @@
+2007-11-18  Abel Cheung  <abelcheung@gmail.com>
+
+	* tw2hk.pl: More fix, thanks to Ambrose Li.
+
 2007-06-03  Abel Cheung  <abelcheung@gmail.com>
 
 	* hk2tw.pl, tw2hk.pl: Some little word addition.
